Patch for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,14 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
+if(WIN32)
+  message(USING WINDOWS)
+  include_directories(../vcpkg/packages/uwebsockets_x86-windows/include)
+  include_directories(../vcpkg/packages/openssl_x86-windows/include)
+  include_directories(../vcpkg/packages/libuv_x86-windows/include)
+  include_directories(../vcpkg/packages/zlib_x86-windows/include)
+endif()
+
 add_executable(path_planning ${sources})
 
 target_link_libraries(path_planning z ssl uv uWS)
