--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,24 @@
-project(SdcPathPlanning)
+project(path-planning)
 
 cmake_minimum_required (VERSION 3.5)
 
-set(CMAKE_CXX_STANDARD 11)
+add_definitions(-std=c++11)
 
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/main.cpp)
+set(sources src/main.cpp src/WebSocketMessageHandler.cpp src/KeepLanePathPlanner.cpp src/KeepLanePathPlanner.h src/OutputPath.h src/PathPlannerInput.h src/CartesianPoint.h src/HighwayMap.cpp src/FrenetPoint.h src/PathPlanner.h src/SimpleSplineBasedPlanner.cpp src/SimpleSplineBasedPlanner.h src/spline.h src/OtherCar.h)
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  include_directories(/usr/local/include)
-  include_directories(/usr/local/opt/openssl/include)
-  link_directories(/usr/local/lib)
-  link_directories(/usr/local/opt/openssl/lib)
-  link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-if(WIN32)
-  message(USING WINDOWS)
-  include_directories(../vcpkg/packages/uwebsockets_x86-windows/include)
-  include_directories(../vcpkg/packages/openssl_x86-windows/include)
-  include_directories(../vcpkg/packages/libuv_x86-windows/include)
-  include_directories(../vcpkg/packages/zlib_x86-windows/include)
-endif()
+include_directories(/usr/local/include)
+include_directories(/usr/local/opt/openssl/include)
+link_directories(/usr/local/lib)
+link_directories(/usr/local/opt/openssl/lib)
+link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
 
-add_executable(path_planning ${sources})
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-target_link_libraries(path_planning z ssl uv uWS)
+add_executable(path-planning ${sources})
+
+target_link_libraries(path-planning z ssl uv uWS)
