--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,13 +26,20 @@ set(sources
 )
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
-	include_directories(/usr/local/include)
-	include_directories(/usr/local/opt/openssl/include)
-	link_directories(/usr/local/lib)
-	link_directories(/usr/local/opt/openssl/lib)
-	link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
+  include_directories(/usr/local/include)
+  include_directories(/usr/local/opt/openssl/include)
+  link_directories(/usr/local/lib)
+  link_directories(/usr/local/opt/openssl/lib)
+  link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+
+if(WIN32)
+  # @todo
+endif()
 
 add_executable(path-planning ${sources})
 
 target_link_libraries(path-planning z ssl uv uWS)
+
+target_include_directories(path-planning PRIVATE src)
+target_include_directories(path-planning PRIVATE src/libuv)
